# aic

./: .gitignore  README.md  WorkflowB_Detailed.md  aic.repos  cable_phase_1.sdf  pixi.toml
.github/workflows/: build.yml
aic_adapter/include/aic_adapter/: aic_adapter.hpp
aic_adapter/src/: aic_adapter.cpp
aic_assets/models/Basler Camera/: model.sdf
aic_assets/models/LC Mount/: model.sdf
aic_assets/models/NIC Card Mount/: model.sdf
aic_assets/models/Robotiq Hand-E/: robotiq_hande.ros2_control.xacro  robotiq_hande_macro.xacro
aic_assets/models/SC Mount/: model.sdf  sc_mount_macro.xacro
aic_assets/models/SC Port/: model.sdf
aic_assets/scripts/: cable.sdf.erb
aic_bringup/launch/: aic_gz_bringup.launch.py  spawn_cable.launch.py
aic_description/urdf/: task_board.urdf.xacro  ur_gz.urdf.xacro
aic_description/world/: aic.sdf  aic_phase_1.sdf
aic_engine/: CMakeLists.txt  package.xml
aic_engine/config/: ros_bridge_config.pbtxt  sample_config.yaml  sample_config_multiple_sc_ports.yaml
aic_engine/src/: aic_engine.cpp  aic_engine.hpp  main.cpp
aic_example_policies/: pixi.toml
aic_flowstate_ros_bridge/: CMakeLists.txt  README.md  aic_flowstate_ros_bridge.manifest.textproto  aic_flowstate_ros_bridge_default_config.pbtxt  package.xml
aic_flowstate_ros_bridge/config/: agent_bridge_joint_task_settings.pbtxt
aic_flowstate_ros_bridge/launch/: flowstate_ros_bridge_launch.py
aic_flowstate_ros_bridge/proto/: agent_bridge.proto
aic_flowstate_ros_bridge/scripts/: test_robot_control_bridge.py
aic_flowstate_ros_bridge/src/: aic_flowstate_ros_bridge_main.cpp  icon_bridge.cpp  icon_bridge.hpp  robot_control_bridge.cpp  robot_control_bridge.hpp
aic_gazebo/: BUILD.bazel  CMakeLists.txt  MODULE.bazel
aic_gazebo/src/: CableModeratorPlugin.cc  CableModeratorPlugin.hh  CablePlugin.cc  OffLimitContactsPlugin.cc  OffLimitContactsPlugin.hh
aic_interfaces/aic_control_interfaces/: pixi.toml
aic_interfaces/aic_engine_interfaces/: CMakeLists.txt
aic_interfaces/aic_model_interfaces/: pixi.toml
aic_model/: pixi.toml
aic_model/aic_model/: aic_model.py  policy.py  policy_ros.py
aic_scoring/src/: ScoringTier2.cc
aic_utils/aic_mujoco/: README.md  mujoco.repos
aic_utils/aic_teleoperation/: pixi.toml
docker/: docker-compose.yaml
docker/aic_converter/: Dockerfile
docker/aic_docs/: requirements.txt  update_image_paths.sh
docker/aic_eval/: Dockerfile
docs/: aic_interfaces.md  conf.py  glossary.md  policy.md  scoring_tests.md
docs/sphinx/: conf.py  index.rst
flowstate/: README.md  flowstate.repos
flowstate/aic_flowstate_interface/: CMakeLists.txt  package.xml
flowstate/aic_flowstate_ros_bridge/: CMakeLists.txt  README.md  aic_flowstate_ros_bridge.manifest.textproto  aic_flowstate_ros_bridge.proto  aic_flowstate_ros_bridge_default_config.pbtxt  package.xml  plugins.xml
flowstate/aic_flowstate_ros_bridge/config/: default_joint_task_settings.pbtxt
flowstate/aic_flowstate_ros_bridge/launch/: aic_flowstate_ros_bridge_launch.py
flowstate/aic_flowstate_ros_bridge/proto/: agent_bridge.proto
flowstate/aic_flowstate_ros_bridge/scripts/: test_robot_control_bridge.py
flowstate/aic_flowstate_ros_bridge/src/: aic_camera_bridge.cpp  aic_camera_bridge.hpp  aic_flowstate_ros_bridge_main.cpp  robot_control_bridge.cpp  robot_control_bridge.hpp
flowstate/aic_flowstate_services/taskboard_spawning_service/: CMakeLists.txt  Dockerfile.service  default_config.pbtxt  package.xml  taskboard_spawning_service.manifest.textproto  taskboard_spawning_service.proto  taskboard_state_server.manifest.textproto  taskboard_state_server.proto  taskboard_state_server_default_config.pbtxt
flowstate/aic_flowstate_services/taskboard_spawning_service/config/: sample_config.yaml
flowstate/aic_flowstate_services/taskboard_spawning_service/include/taskboard_spawning_service/: taskboard_spawner_constants.h  taskboard_spawner_logic.h  taskboard_spawner_node.h
flowstate/aic_flowstate_services/taskboard_spawning_service/src/: taskboard_spawner_logic.cc  taskboard_spawner_node.cpp  taskboard_state_server.cpp
flowstate/aic_flowstate_skills/: CMakeLists.txt  package.xml
flowstate/aic_flowstate_skills/get_taskboard_state_skill/: CMakeLists.txt  Dockerfile.skill
flowstate/aic_flowstate_skills/get_taskboard_state_skill/src/: get_taskboard_state_skill.cc  get_taskboard_state_skill.h  get_taskboard_state_skill.manifest.textproto  get_taskboard_state_skill.proto
flowstate/aic_flowstate_skills/insert_cable_skill/: CMakeLists.txt  insert_cable_skill.cc
flowstate/aic_flowstate_skills/insert_cable_skill/src/: insert_cable_action_client.cc  insert_cable_action_client.h  insert_cable_skill.cc  insert_cable_skill.h  insert_cable_skill.manifest.textproto  insert_cable_skill.proto
flowstate/aic_flowstate_skills/tare_force_torque_sensor_skill/: CMakeLists.txt
flowstate/aic_flowstate_skills/tare_force_torque_sensor_skill/src/: tare_force_torque_sensor_skill.cc  tare_force_torque_sensor_skill.h  tare_force_torque_sensor_skill.manifest.textproto  tare_force_torque_sensor_skill.proto
flowstate/resources/: Dockerfile.skill
flowstate/scripts/: build_aic_adapter.sh  build_aic_model.sh  build_container.sh  build_flowstate_ros_bridge.sh
icon_bridge/: CMakeLists.txt  README.md  aic_flowstate_ros_bridge.manifest.textproto  aic_flowstate_ros_bridge.proto  aic_flowstate_ros_bridge_default_config.pbtxt  flowstate_ros_bridge.proto  package.xml  plugins.xml
icon_bridge/config/: agent_bridge_joint_task_settings.pbtxt  agent_bridge_task_settings.pbtxt
icon_bridge/include/icon_bridge/: agent_bridge_joint_info.h
icon_bridge/launch/: flowstate_ros_bridge_launch.py
icon_bridge/proto/: agent_bridge.proto
icon_bridge/scripts/: test_icon_bridge.py
icon_bridge/src/: aic_flowstate_ros_bridge_main.cpp  flowstate_ros_bridge_main.cpp  icon_bridge.cpp  icon_bridge.hpp
my_policy_node/: LabelVisualization.py  README.md  README_GenerateData.md  WALKTHROUGH_GenerateData.md  package.xml  setup.py
my_policy_node/my_policy_node/: GenerateData.py  GenerateDataInsertionHoles.py  InsertCable.py  spiral_search.py
(+40 files in other folders)
