load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@gz-sim//bazel:gz_sim_system_libraries.bzl", "gz_sim_system_libraries")

package(default_visibility = ["//visibility:public"])

gz_sim_system_libraries(
    srcs = ["src/CableModeratorPlugin.cc", "src/CableModeratorPlugin.hh"],
    so_lib_name = "libCableModeratorPlugin.so",
    static_lib_name = "CableModeratorPluginLib",
    deps = [
        "@gz-sim",
    ],
)

gz_sim_system_libraries(
    srcs = ["src/OffLimitContactsPlugin.cc", "src/OffLimitContactsPlugin.hh"],
    so_lib_name = "libOffLimitContactsPlugin.so",
    static_lib_name = "OffLimitContactsPluginLib",
    deps = [
        "@gz-sim",
    ],
)
