module(
    name = "aic_gazebo",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "30.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Gazebo Dependencies
bazel_dep(name = "gz-common", version = "7.1.1")
bazel_dep(name = "gz-msgs", version = "12.0.1")
bazel_dep(name = "gz-plugin", version = "4.0.0")
bazel_dep(name = "gz-sim", version = "10.1.1")
bazel_dep(name = "sdformat", version = "16.0.1")
