<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_flowstate_skills</name>
  <version>0.0.1</version>
  <description>Flowstate skills for AIC execution</description>
  <maintainer email="kbalasundar@google.com">kbalasundar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aic_task_interfaces</depend>
  <depend>aic_flowstate_interface</depend>
  <depend>intrinsic_sdk_cmake</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
