<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taskboard_spawning_service</name>
  <version>0.0.1</version>
  <description>The taskboard_spawning_service package provides a ROS 2 node to dynamically spawn and position context-aware visual elements from a catalog in the Flowstate workspace.</description>
  <maintainer email="kbalasundar@todo.todo">kbalasundar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>aic_flowstate_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
